--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
 	<div id="header"> 
-		<div class="container">
 			<nav>
 				<img src="images/afrahdev.png" class="logo">
 				<ul id="sidemenu">
 					<li><a href="#header" class="header">Home</a> </li>
 					<li><a href="#about">About</a> </li>
 					<li><a href="#services">Services</a> </li>
-					<li><a href="#portfolio">Portfolio</a> </li>
+					<li><a href="#portfolio">Projects</a> </li>
 					<li><a href="#contact">Contact</a> </li>
 					<i class="fa-solid fa-xmark" onclick="closemenu()"></i>
 				</ul>
@@ -24,70 +23,80 @@
 			</nav>
 			<div class="home-row">
 				<div class="header-text" >
-					<p class="first-text">Frontend Web developer</p>
-					<h1>Hi, I'am Afrah Said <br><span class="first-sub-title"> Afrah <span class="color-sub-title"> Dev</span></span></h1>
+					<p class="first-text">Front-end Web developer</p>
+					<h1>Hi, I'am Afrah Said <br><span class="first-sub-title"> Afrah <span class="color-sub-title">Dev</span></span></h1>
 					<h2></h2>
 					<p class="home-sub-title">Energetic web developer, passionate about solving business problems and creating interactive websites.</p>
 				</div>
 				<div class="img-container ">
 				<i class="fa-solid fa-globe img-ava"></i>
 				</div>
-				</div>  
-			</div>
+			</div>  
 		</div>
 	</div>
 	<!--About Section starts here-->
 	<div id="about">
-		<div class="container">
 			<h1 class="sub-title">About Me</h1>	
 			<div class="row about-row">
-				<div class="about-col-2">
-					<p class="about-doc">I am a junior front-end developer who enjoys learning new things and who is persistent in developing user-experienced websites.<br> </p>
-					<p class="about-doc about-doc-mid"><span>Technology has been my main focus for many years, and this motivated me to pursue my bachelor's degree in Information Technology. Despite that, in the past few years, I have realized the great usage and importance of websites in our daily lives. Thus, I have turned my focus to frontend development, for which I have developed a great passion, and found myself enjoying the process of recalling my programming mindset.</span></p>
-					<p class="about-doc">  &emsp;&ensp; Therefore, I have decided to contribute to this great tech industry by investing my ability to attention to detail and my curiosity in nature into developing great websites that cope with the fast-growing world of technology.</p>	
-					<div class="tab-titles">
-						<p class="tab-links active-link" onclick="opentab('skills')"> Skills</p>	
-						<p class="tab-links" onclick="opentab('experience')"> Experience</p>
-						<p class="tab-links" onclick="opentab('education')"> Education</p>
+				<div class="">
+					<div class="about-text">
+						<p class="about-doc">I am a front-end developer with a central focus on information technology for many years.</p>
+						<p class="about-doc about-doc-mid"><span>I enjoy learning new things and am persistent in developing user-experience-oriented websites by investing my ability to attention to detail and my curiosity in nature into developing great websites that cope with the fast-growing world of technology.</span></p>
 					</div>
-					<div class="tab-contents active-tab" id="skills">
-						<ul >
-							<li class="skill"><span>Programming Languages <br> </span>HTML/ CSS & JavaScript</li>
-							<li class="skill" ><span >Languages<br></span>Arabic, English & Turkish</li>
-						</ul>
-					</div>	
-					<div class="tab-contents" id="experience">
-						<ul >
-							<li class="skill"><span> Mar 2017 - Current <br> </span>Teacher <br> FURQAN GROUP FOR EDUCATION AND IT</li>
-							<li class="skill" ><span >Aug 2019 - Dec 2019<br></span>Information Technology Assistant <br> ALKHALEEJ TRAINING & EDUCATION</li>
-						</ul>
-					</div>	
-					<div class="tab-contents" id="education">
-						<ul >
-							<li class="skill"><span>Feb 2021 - Current <br> </span> Master's in Advanced Technologies.<br> <span class="span-small">Dumlupinar University, Kutahya </span></li>
-							<li class="skill" ><span >Sep 2016 - July 2020<br></span>Bachelor's in Information Technology and Computing.<br> <span class="span-small"> Arab Open University, Jeddah </span> </li>
-						</ul>
-					</div>			
+					<div class="card">
+						<div class="education">
+							<h3>EDUCATION</h3>
+								<ul >
+									<li ><span>Feb 2021 - August 2023 <br> </span> Master's in Advanced Technologies<br> <span class="span-small">Dumlupinar University | Kutahya, Turkey <br>GPA: 4.0 / 3.9  </span></li>
+									<li ><span >Sep 2016 - July 2020<br></span>Bachelor's in Information Technology and Computing<br> <span class="span-small"> Arab Open University | Jeddah, KSA<br>GPA: 4.0 / 3.79 </span> </li>
+								</ul>
+						</div>
+						<div class="skills">
+							<h3>SKILLS</h3>
+								<ul >
+									<li ><span>PROGRAMMING <br> </span> <span class="span-small">Confident: </span>C++ | HTML | CSS | JavaScript | React JS | Bootstrap | Git <br> <span class="span-small">Familiar: </span> PHP | MySQL | Python</li>
+									<li ><span >UX/UI<br></span>Figma </li>
+									<li ><span >LANGUAGES<br></span>Arabic <span class="span-small"> - Native <br></span>English <span class="span-small"> - Proficient <br></span>Turkish <span class="span-small"> - Moderate proficiency <br></span></li>
+								</ul>
+						</div>
+					</div>
+					<div class=" publications">
+						<h3>Publications</h3>
+						<p class=" " >Afrah SAID & Hanife GÖKER, October 2023, <strong>  
+							<a href="https://link.springer.com/article/10.1007/s11571-023-10010-y">Spectral analysis and Bi-LSTM
+								 deep network-based approach in detection of mild cognitive impairment from electroencephalography signals, 
+							</a></strong> <span>Cognitive Neurodynamics.</span> </p>
+						<p class="">Afrah SAID & Hanife GÖKER, March 2023,<strong>  
+							<a href="https://dergipark.org.tr/tr/download/article-file/2865128">Automatic Detection of Mild Cognitive Impairment from EEG Recordings
+							 Using Discrete Wavelet Transform Leader and Ensemble Learning Methods</a></strong>,
+							 <span> Dicle University Journal of Engineering,</span> 14:1, Page 47-54. </p>
+						<h3>Conferences</h3>
+
+						<p class="">Afrah SAID & Hanife GÖKER,<strong> Autism Spectrum Disorder Detection Using Machine Learning Algorithms,</strong> <span>
+							6th International Conference on Computational Mathematics and Engineering Sciences,</span> May 2022 - Ordu-Turkey. </p>
+						<p class="">Afrah SAID & Hanife GÖKER,<strong>  
+							Comparative Analysis Of Machine Learning Algorithms For Early Diagnosis Of Alzheimer’s Disease </strong>,<span>
+							6th International Conference on Computational Mathematics and Engineering Sciences,</span> May 2022 - Ordu-Turkey.</p>
+					</div>
 				</div>
 			</div>
-		</div>
 	</div>
 	<!--About Section ends here-->
 
 	<!--Services Section starts here-->
 <div id="services">
 	<div class="container">
-		<h1 class="sub-title">My Services</h1>
+		<h1 class="sub-title"> Services</h1>
 		<div class="services-list">
 			<div>
 				<i class="fa-solid fa-code"></i>
 				<h2>Web Development</h2>
-				<p>I develop responsive websites using HTML, CSS and JavaScript </p>
+				<p>I develop responsive websites using HTML, CSS, JavaScript & Bootstrap </p>
 			</div>
 			<div>
 				<i class="fa-brands fa-app-store-ios"></i>
-				<h2> "APP development" <br> <span> SOON </span></h2>
-				<p> Meteor JS, AngularJS & React Native</p>
+				<h2> APP development <br> <span>  </span></h2>
+				<p>  React </p>
 			</div>
 			<!--<button onclick="window.print()">Print this page</button>-->
 		</div>	
@@ -96,39 +105,128 @@
 	<!--Services Section ends here-->
 
 	<!--Portfolio Section Starts here-->
-<div id="portfolio">
+<div id="portfolio" class="js-portfolio">
 	<div class="container">
-		<h2 class="sub-title">My Projects</h2>
+		
+		<h2 class="sub-title"> Projects</h2>
+		<h4 class="">HTML | CSS | JavaScript</h4>
 		<div class="work-list">	
 			<div class="work">
-				<img src="images/food.png">
+				<img src="images/lul.png">
 				<div class="layer">
-					<h3>Food World </h2>
-					<p>Restaurant website with category list and special offer section. Build with CSS and JavaScript</p>
-					<a href="https://afrahsaid.github.io/foodWorld/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					<h3> Lul Store</h2>
+					<p>Incorporating e-commerce website that showcases
+						products, enables users to view detailed information
+						about individual products upon selection, and integrates
+						a shopping cart, user-friendly shopping experience.</p>
+					<a href="https://afrahsaid.github.io/LulStore/index.html" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+				</div>
+			</div>
+			<div class="work">
+				<img src="images/workouts.png">
+				<div class="layer">
+					<h3>Fitness Club Gym </h2>
+					<p>Delivering a visually vibrant and responsive website
+						design, enhancing the user experience with an array of
+						rich and dynamic colors.</p>
+					<a href="https://afrahsaid.github.io/FitnessClub/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 			<div class="work">
 				<img src="images/todo.png">
 				<div class="layer">
 					<h3>To Do List </h2>
-					<p>Website for your Daily Task Lists. You can edit task, modify tasks, delete the task, and also delete all the tasks at once. Once done with your task you can check the checkbox next to the task and have it crossed out.Build with HTML, CSS JavaScript.</p>
+					<p>Efficient task management website, allowing easy task editing, modification, deletion, and batch deletion. Mark completed tasks with a checkbox for streamlined organization.</p>
 					<a href="https://afrahsaid.github.io/ToDoList/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" ></i></a>
+				</div>
+			</div>
+			<div class="work">
+				<img src="images/food.png">
+				<div class="layer">
+					<h3>Food World </h2>
+					<p>A restaurant website with visually engaging and dynamic color schemes.</p>
+					<a href="https://afrahsaid.github.io/foodWorld/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
 			<div class="work">
 				<img src="images/clockd.png">
 				<div class="layer">
 					<h3>Digital Clock </h2>
-					<p>24 Hour digital clock with beautiful background and AM/PM time display format. Built with HTML, CSS & JavaScript.</p>
+					<p>24 Hour digital clock with beautiful background and AM/PM time display format. </p>
 					<a href="https://afrahsaid.github.io/24HourDigitalClock/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
+			<div class="work">
+				<img src="images/calculator.png">
+				<div class="layer">
+					<h3>Calculator </h2>
+					<p>Simple Calculator.</p>
+					<a href="https://afrahsaid.github.io/simplecalculator.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+				</div>
+			</div>
+			
 		</div>
-		<a href="https://github.com/afrahsaid" target="_blank" class="btn"> See More Projects</a>
+		<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
+		
 	</div>	
 </div>
 	<!--Portfolio Section ends here-->
+	<!-- React Portfolio -->
+	<div id="portfolio" class="react-portfolio">
+		<div class="container ">
+			<h4 class="">React JS</h4>
+			<div class="work-list react-section">	
+				<div class="work">
+					<img src="images/movie.png">
+					<div class="layer">
+						<h3> Movie Night</h2>
+						<p>A streamlined movie list website featuring movie names,
+							search functionality, and categories sourced from an API.</p>
+						<a href="https://afrahsaid.github.io/movie-night/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/holiday.png">
+					<div class="layer">
+						<h3>Holiday Tours </h2>
+						<p>Holiday tour website showcasing tour names, details,
+							pricing, and locations retrieved from an API.</p>
+						<a href="https://afrahsaid.github.io/tours/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+			</div>
+			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
+			
+		</div>	
+	</div>
+	<!-- UX/UI Portfolio -->
+	<div id="portfolio" class="ux-ui-portfolio">
+		<div class="container ">
+			<h4 class="">UX/UI Design - Figma</h4>
+			<div class="work-list react-section">	
+				<div class="work">
+					<img src="images/crypto.png">
+					<div class="layer">
+						<h3> Crypto Web Design</h2>
+						<p>Website design using Figma</p>
+						<a href="https://www.figma.com/file/PQHzZm0sJ9MSkYRQlnkzQq/Website?type=design&node-id=0%3A1&mode=design&t=2pqkEXmjbw4xbQgj-1"
+						 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/child.png">
+					<div class="layer">
+						<h3>Child development landing page </h2>
+						<p>Landing page design using Figma</p>
+						<a href="https://www.figma.com/file/aBk4wvli6AIdF3fAsFHo1P/Child-Health-Care-Project?type=design&node-id=0%3A1&mode=design&t=C5yOFzZ28w66bBjA-1"
+						 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+			</div>
+			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
+			
+		</div>	
+	</div>
 <!--Contact Section Starts here-->
 <div id="contact">
 	<div class="container">
