--- a/index.html
+++ b/index.html
@@ -46,38 +46,20 @@
 					<div class="card">
 						<div class="education">
 							<h3>EDUCATION</h3>
-								<ul >
-									<li ><span>Feb 2021 - August 2023 <br> </span> Master's in Advanced Technologies<br> <span class="span-small">Dumlupinar University | Kutahya, Turkey <br>GPA: 4.0 / 3.9  </span></li>
-									<li ><span >Sep 2016 - July 2020<br></span>Bachelor's in Information Technology and Computing<br> <span class="span-small"> Arab Open University | Jeddah, KSA<br>GPA: 4.0 / 3.79 </span> </li>
-								</ul>
+							<ul >
+								<li ><span>Master's in Advanced Technologies<br> </span>Dumlupinar University | Kutahya, Turkey <br> <span class="span-small">Feb 2021 - August 2023 <br> GPA: 4.0 / 3.9  </span></li>
+								<li ><span>Bachelor's in Information Technology and Computing<br></span> Arab Open University | Jeddah, KSA <br> <span class="span-small"> Sep 2016 - July 2020 <br>GPA: 4.0 / 3.79 </span> </li>
+							</ul>
 						</div>
 						<div class="skills">
 							<h3>SKILLS</h3>
 								<ul >
-									<li ><span>PROGRAMMING <br> </span> <span class="span-small">Confident: </span>C++ | HTML | CSS | JavaScript | React JS | Bootstrap | Git <br> <span class="span-small">Familiar: </span> PHP | MySQL | Python</li>
+									<li ><span>PROGRAMMING <br> </span> <span class="span-small">Confident: </span>React JS | Redux | JavaScript | Tailwind CSS | HTML | CSS | Bootstrap | Git <br> <span class="span-small">Familiar: </span> C++ | PHP | MySQL | Python</li>
 									<li ><span >UX/UI<br></span>Figma </li>
 									<li ><span >LANGUAGES<br></span>Arabic <span class="span-small"> - Native <br></span>English <span class="span-small"> - Proficient <br></span>Turkish <span class="span-small"> - Moderate proficiency <br></span></li>
 								</ul>
 						</div>
-					</div>
-					<div class=" publications">
-						<h3>Publications</h3>
-						<p class=" " >Afrah SAID & Hanife GÖKER, October 2023, <strong>  
-							<a href="https://link.springer.com/article/10.1007/s11571-023-10010-y">Spectral analysis and Bi-LSTM
-								 deep network-based approach in detection of mild cognitive impairment from electroencephalography signals, 
-							</a></strong> <span>Cognitive Neurodynamics.</span> </p>
-						<p class="">Afrah SAID & Hanife GÖKER, March 2023,<strong>  
-							<a href="https://dergipark.org.tr/tr/download/article-file/2865128">Automatic Detection of Mild Cognitive Impairment from EEG Recordings
-							 Using Discrete Wavelet Transform Leader and Ensemble Learning Methods</a></strong>,
-							 <span> Dicle University Journal of Engineering,</span> 14:1, Page 47-54. </p>
-						<h3>Conferences</h3>
-
-						<p class="">Afrah SAID & Hanife GÖKER,<strong> Autism Spectrum Disorder Detection Using Machine Learning Algorithms,</strong> <span>
-							6th International Conference on Computational Mathematics and Engineering Sciences,</span> May 2022 - Ordu-Turkey. </p>
-						<p class="">Afrah SAID & Hanife GÖKER,<strong>  
-							Comparative Analysis Of Machine Learning Algorithms For Early Diagnosis Of Alzheimer’s Disease </strong>,<span>
-							6th International Conference on Computational Mathematics and Engineering Sciences,</span> May 2022 - Ordu-Turkey.</p>
-					</div>
+					</div>			
 				</div>
 			</div>
 	</div>
@@ -86,17 +68,23 @@
 	<!--Services Section starts here-->
 <div id="services">
 	<div class="container">
+		
 		<h1 class="sub-title"> Services</h1>
 		<div class="services-list">
 			<div>
 				<i class="fa-solid fa-code"></i>
 				<h2>Web Development</h2>
-				<p>I develop responsive websites using HTML, CSS, JavaScript & Bootstrap </p>
+				<p>I develop responsive websites using HTML, CSS, JavaScript, Tailwind CSS & Bootstrap </p>
 			</div>
 			<div>
-				<i class="fa-brands fa-app-store-ios"></i>
-				<h2> APP development <br> <span>  </span></h2>
-				<p>  React </p>
+				<i class="fa-brands fa-react"></i>
+				<h2> APP Development <br> <span>  </span></h2>
+				<p>  Using React JS & Redux </p>
+			</div>
+			<div>
+				<i class="fa-brands fa-figma"></i>
+				<h2> UX/UI Design <br> <span>  </span></h2>
+				<p> Using Figma </p>
 			</div>
 			<!--<button onclick="window.print()">Print this page</button>-->
 		</div>	
@@ -107,10 +95,53 @@
 	<!--Portfolio Section Starts here-->
 <div id="portfolio" class="js-portfolio">
 	<div class="container">
-		
 		<h2 class="sub-title"> Projects</h2>
+		<!-- React Portfolio -->
+	<div id="portfolio" class="react-portfolio">
+			<h4 class="">React JS | Redux</h4>
+			<div class="work-list react-section container-portfolio">
+				<div class="work">
+					<img src="images/cheerful.png">
+					<div class="layer">
+						<h3> Cheerful Hotel</h2>
+						<p>Hotel website with search facility based on room type, number of guests, price, size, and many more options.</p>
+						<a href="https://cheerful-hotel-application.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/shopping.png">
+					<div class="layer">
+						<h3> Shopping Cart</h2>
+						<p>A shopping cart with an admin page that allows you to add new products to the website as an admin.</p>
+						<a href="https://afrahsaid.github.io/shopping-cart/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>	
+				<div class="work">
+					<img src="images/movie.png">
+					<div class="layer">
+						<h3> Movie Night</h2>
+						<p>A streamlined movie list website featuring movie names,
+							search functionality, and categories sourced from an API.</p>
+						<a href="https://afrahsaid.github.io/movie-show/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+				<div class="work">
+					<img src="images/holiday.png">
+					<div class="layer">
+						<h3>Holiday Tours </h2>
+						<p>Holiday tour website showcasing tour names, details,
+							pricing, and locations retrieved from an API.</p>
+						<a href="https://afrahsaid.github.io/tours/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+					</div>
+				</div>
+			</div>
+			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
+			
+	</div>
+	<div id="portfolio" class="react-portfolio">
+
 		<h4 class="">HTML | CSS | JavaScript</h4>
-		<div class="work-list">	
+		<div class="work-list container-portfolio">	
 			<div class="work">
 				<img src="images/lul.png">
 				<div class="layer">
@@ -164,46 +195,19 @@
 					<a href="https://afrahsaid.github.io/simplecalculator.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
-			
 		</div>
 		<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
-		
-	</div>	
+	</div>
+
+</div>
 </div>
 	<!--Portfolio Section ends here-->
-	<!-- React Portfolio -->
-	<div id="portfolio" class="react-portfolio">
-		<div class="container ">
-			<h4 class="">React JS</h4>
-			<div class="work-list react-section">	
-				<div class="work">
-					<img src="images/movie.png">
-					<div class="layer">
-						<h3> Movie Night</h2>
-						<p>A streamlined movie list website featuring movie names,
-							search functionality, and categories sourced from an API.</p>
-						<a href="https://afrahsaid.github.io/movie-night/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-					</div>
-				</div>
-				<div class="work">
-					<img src="images/holiday.png">
-					<div class="layer">
-						<h3>Holiday Tours </h2>
-						<p>Holiday tour website showcasing tour names, details,
-							pricing, and locations retrieved from an API.</p>
-						<a href="https://afrahsaid.github.io/tours/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-					</div>
-				</div>
-			</div>
-			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
-			
-		</div>	
-	</div>
+	
 	<!-- UX/UI Portfolio -->
 	<div id="portfolio" class="ux-ui-portfolio">
-		<div class="container ">
 			<h4 class="">UX/UI Design - Figma</h4>
-			<div class="work-list react-section">	
+			<div class="container ">
+			<div class="work-list react-section container-portfolio">	
 				<div class="work">
 					<img src="images/crypto.png">
 					<div class="layer">
@@ -224,8 +228,9 @@
 				</div>
 			</div>
 			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
-			
-		</div>	
+					</div>
+	
+	</div>
 	</div>
 <!--Contact Section Starts here-->
 <div id="contact">
@@ -289,7 +294,7 @@
 	}
 </script>
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbzP6MTPXl3gbfLJIlJjHDKZTd6X7XkCs1bp2lBk9mXMUq9azgyBBVfBvkf1KEegH5dXhg/exec'
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbyqyZhcTjkEoooS8fHJ4W9chWRrXqc9zs8KzQxoN4pmOGoElJkNJuTj7cl3tBb8groL/exec'
   const form = document.forms['submit-to-google-sheet']
   const msg =document.getElementById("msg");
   form.addEventListener('submit', e => {
