--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 	<div class="container">
 		<h2 class="sub-title"> Projects</h2>
 		<!-- React Portfolio -->
-	<div id="portfolio" class="react-portfolio">
+	<div id="portfolio" class="container-portfolio">
 			<h4 class="">React JS | Redux</h4>
-			<div class="work-list react-section container-portfolio">
+			<div class="work-list react-section ">
 				<div class="work">
 					<img src="images/cheerful.png">
 					<div class="layer">
@@ -138,10 +138,10 @@
 			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
 			
 	</div>
-	<div id="portfolio" class="react-portfolio">
+	<div id="portfolio" class="container-portfolio">
 
 		<h4 class="">HTML | CSS | JavaScript</h4>
-		<div class="work-list container-portfolio">	
+		<div class="work-list ">	
 			<div class="work">
 				<img src="images/lul.png">
 				<div class="layer">
@@ -200,38 +200,38 @@
 	</div>
 
 </div>
+	<!-- UX/UI Portfolio -->
+	<div id="portfolio" class="container-portfolio">
+		<h4 class="">UX/UI Design - Figma</h4>
+		<div class="container ">
+		<div class="work-list react-section  ">	
+			<div class="work">
+				<img src="images/crypto.png">
+				<div class="layer">
+					<h3> Crypto Web Design</h2>
+					<p>Website design using Figma</p>
+					<a href="https://www.figma.com/file/PQHzZm0sJ9MSkYRQlnkzQq/Website?type=design&node-id=0%3A1&mode=design&t=2pqkEXmjbw4xbQgj-1"
+					 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+				</div>
+			</div>
+			<div class="work">
+				<img src="images/child.png">
+				<div class="layer">
+					<h3>Child development landing page </h2>
+					<p>Landing page design using Figma</p>
+					<a href="https://www.figma.com/file/aBk4wvli6AIdF3fAsFHo1P/Child-Health-Care-Project?type=design&node-id=0%3A1&mode=design&t=C5yOFzZ28w66bBjA-1"
+					 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+				</div>
+			</div>
+		</div>
+			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
+			</div>
+		</div>
+	</div>
 </div>
 	<!--Portfolio Section ends here-->
 	
-	<!-- UX/UI Portfolio -->
-	<div id="portfolio" class="ux-ui-portfolio">
-			<h4 class="">UX/UI Design - Figma</h4>
-			<div class="container ">
-			<div class="work-list react-section container-portfolio">	
-				<div class="work">
-					<img src="images/crypto.png">
-					<div class="layer">
-						<h3> Crypto Web Design</h2>
-						<p>Website design using Figma</p>
-						<a href="https://www.figma.com/file/PQHzZm0sJ9MSkYRQlnkzQq/Website?type=design&node-id=0%3A1&mode=design&t=2pqkEXmjbw4xbQgj-1"
-						 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-					</div>
-				</div>
-				<div class="work">
-					<img src="images/child.png">
-					<div class="layer">
-						<h3>Child development landing page </h2>
-						<p>Landing page design using Figma</p>
-						<a href="https://www.figma.com/file/aBk4wvli6AIdF3fAsFHo1P/Child-Health-Care-Project?type=design&node-id=0%3A1&mode=design&t=C5yOFzZ28w66bBjA-1"
-						 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-					</div>
-				</div>
-			</div>
-			<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
-					</div>
-	
-	</div>
-	</div>
+
 <!--Contact Section Starts here-->
 <div id="contact">
 	<div class="container">
