--- a/index.html
+++ b/index.html
@@ -206,6 +206,15 @@
 		<div class="container ">
 		<div class="work-list react-section  ">	
 			<div class="work">
+				<img src="images/worldsaas.png">
+				<div class="layer">
+					<h3>World SaaS Project Management </h2>
+					<p>SaaS Project Management website design</p>
+					<a href="https://www.figma.com/design/kb3wvSZJEOjWkSSCUcwxcJ/worldSaaS?node-id=0%3A1&t=TZ1mCC8Q67Twcw0B-1"
+					 target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+				</div>
+			</div>
+			<div class="work">
 				<img src="images/crypto.png">
 				<div class="layer">
 					<h3> Crypto Web Design</h2>
