--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</nav>
 			<div class="home-row">
 				<div class="header-text" >
-					<p class="first-text">Front-end Web developer</p>
+					<p class="first-text">Information Technology Specialist | Web Developer</p>
 					<h1>Hi, I'am Afrah Said <br><span class="first-sub-title"> Afrah <span class="color-sub-title">Dev</span></span></h1>
 					<h2></h2>
 					<p class="home-sub-title">Energetic web developer, passionate about solving business problems and creating interactive websites.</p>
@@ -40,15 +40,22 @@
 			<div class="row about-row">
 				<div class="">
 					<div class="about-text">
-						<p class="about-doc">I am a front-end developer with a central focus on information technology for many years.</p>
+						<p class="about-doc">I am a web developer with a central focus on information technology for many years.</p>
 						<p class="about-doc about-doc-mid"><span>I enjoy learning new things and am persistent in developing user-experience-oriented websites by investing my ability to attention to detail and my curiosity in nature into developing great websites that cope with the fast-growing world of technology.</span></p>
 					</div>
 					<div class="card">
 						<div class="education">
+							<h3>EXPERIENCE</h3>
+							<ul >
+								<li ><span>Web Developer<br> </span>Freelancer | Istanbul, Turkey <br> <span class="span-small"> Aug 2023 - Present   </span></li>
+								<li ><span>Information Technology Assistant<br></span> Al-Khaleej Training & Education | Jeddah, KSA <br> <span class="span-small">Aug 2019 - Dec 2019 </span> </li>
+							</ul>
+						</div>
+						<div class="education">
 							<h3>EDUCATION</h3>
 							<ul >
-								<li ><span>Master's in Advanced Technologies<br> </span>Dumlupinar University | Kutahya, Turkey <br> <span class="span-small">Feb 2021 - August 2023 <br> GPA: 4.0 / 3.9  </span></li>
-								<li ><span>Bachelor's in Information Technology and Computing<br></span> Arab Open University | Jeddah, KSA <br> <span class="span-small"> Sep 2016 - July 2020 <br>GPA: 4.0 / 3.79 </span> </li>
+								<li ><span>Master's in Advanced Technologies<br> </span>Dumlupinar University | Kutahya, Turkey <br> <span class="span-small"> GPA: 4.0 / 4.0  </span></li>
+								<li ><span>Bachelor's in Information Technology and Computing<br></span> Arab Open University | Jeddah, KSA <br> <span class="span-small">GPA: 4.0 / 3.79 </span> </li>
 							</ul>
 						</div>
 						<div class="skills">
@@ -163,14 +170,7 @@
 					<a href="https://afrahsaid.github.io/FitnessClub/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
-			<div class="work">
-				<img src="images/todo.png">
-				<div class="layer">
-					<h3>To Do List </h2>
-					<p>Efficient task management website, allowing easy task editing, modification, deletion, and batch deletion. Mark completed tasks with a checkbox for streamlined organization.</p>
-					<a href="https://afrahsaid.github.io/ToDoList/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" ></i></a>
-				</div>
-			</div>
+			
 			<div class="work">
 				<img src="images/food.png">
 				<div class="layer">
@@ -179,22 +179,8 @@
 					<a href="https://afrahsaid.github.io/foodWorld/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
 				</div>
 			</div>
-			<div class="work">
-				<img src="images/clockd.png">
-				<div class="layer">
-					<h3>Digital Clock </h2>
-					<p>24 Hour digital clock with beautiful background and AM/PM time display format. </p>
-					<a href="https://afrahsaid.github.io/24HourDigitalClock/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-				</div>
-			</div>
-			<div class="work">
-				<img src="images/calculator.png">
-				<div class="layer">
-					<h3>Calculator </h2>
-					<p>Simple Calculator.</p>
-					<a href="https://afrahsaid.github.io/simplecalculator.github.io/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-				</div>
-			</div>
+			
+			
 		</div>
 		<a href="https://github.com/afrahsaid" target="_blank" class="btn">Projects Source Code</a>
 	</div>
