--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<h3>EXPERIENCE</h3>
 							<ul >
 								<li ><span>Web Developer<br> </span>Freelancer | Istanbul, Turkey <br> <span class="span-small"> Aug 2023 - Present   </span></li>
-								<li ><span>Information Technology Assistant<br></span> Al-Khaleej Training & Education | Jeddah, KSA <br> <span class="span-small">Aug 2019 - Dec 2019 </span> </li>
+								<li ><span>Teacher<br></span> Furqan for Education & IT | Jeddah, KSA <br> <span class="span-small">Mar 2017 - Jan 2025 (7 years & 11 months) </span> <br> <span class="span-small">Dec 2020 - Jan 2025 (Remote) </span>  <br> <span class="span-small">March 2017 - Nov 2020 (On-site) </span> </li>
 							</ul>
 						</div>
 						<div class="education">
@@ -82,9 +82,9 @@
 						<div class="skills">
 							<h3>SKILLS</h3>
 								<ul >
-									<li ><span>PROGRAMMING <br> </span> <span class="span-small">Confident: </span>React JS | Redux | JavaScript | Tailwind CSS | HTML | CSS | Bootstrap | Git <br> <span class="span-small">Familiar: </span> C++ | PHP | MySQL | Python</li>
+									<li ><span>PROGRAMMING <br> </span> <span class="span-small">Confident: </span>React JS | Redux | JavaScript | Tailwind CSS | HTML | CSS | Bootstrap | Git <br> <span class="span-small">Familiar: </span> C++ | PHP | MySQL | Python | Wordpress | Rest API</li>
 									<li ><span >UX/UI<br></span>Figma </li>
-									<li ><span >LANGUAGES<br></span>Arabic <span class="span-small"> - Native <br></span>English <span class="span-small"> - Proficient <br></span>Turkish <span class="span-small"> - Moderate proficiency <br></span></li>
+									<li ><span >LANGUAGES<br></span>Somali <span class="span-small"> - Native <br></span>Arabic <span class="span-small"> - Native <br></span>English <span class="span-small"> - Full proficiency<br></span>Turkish <span class="span-small"> - Moderate proficiency <br></span></li>
 								</ul>
 						</div>
 					</div>			
