--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<h3>EXPERIENCE</h3>
 							<ul >
 								<li ><span>Web Developer<br> </span>Freelancer | Istanbul, Turkey <br> <span class="span-small"> Aug 2023 - Present   </span></li>
-								<li ><span>Teacher<br></span> Furqan for Education & IT | Jeddah, KSA <br> <span class="span-small">Mar 2017 - Jan 2025 (7 years & 11 months) </span> <br> <span class="span-small">Dec 2020 - Present  </span>(Remote)  <br> <span class="span-small">March 2017 - Nov 2020  </span>(On-site) </li>
+								<li ><span>Teacher<br></span> Furqan for Education & IT | Jeddah, KSA <br> <span class="span-small">Mar 2017 - Present (8 years) </span> <br> <span class="span-small">Dec 2020 - Present  </span>(Remote)  <br> <span class="span-small">March 2017 - Nov 2020  </span>(On-site) </li>
 							</ul>
 						</div>
 						<div class="education">
