--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<p><i class="fa-regular fa-envelope"></i>  afrahdev@gmail.com</p>
 				<div class="social-icons">
 					<ul>
-						<li><a href="https://twitter.com/afrahdev" target="_blank"> <i class="fa-brands fa-twitter" ></i> </a></li>
+						<li><a href="https://twitter.com/afrahdev" target="_blank"><i class="fa-brands fa-x-twitter"></i> </a></li>
 						<li><a href="https://www.facebook.com/profile.php?id=100090659045023" target="_blank"><i class="fa-brands fa-facebook"></i> </a></li>
 						<li><a href="https://www.instagram.com/afrahdev/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a></li>
 						<li></li>
